--- a/README.ME
+++ b/README.ME
@@ -4,3 +4,16 @@ Valid operators a re + , −, ∗ , /. Each operand may be an integer or another
 Some examples :
 [ " 2 " , " 1 " , "+ " , " 3 " , " ∗ " ] −> ( ( 2 + 1) ∗ 3) −> 9
 [ " 4 " , " 13 " , " 5 " , "/ " , "+ " ] −> (4 + (1 3 / 5) ) −> 6
+
+Problem 2 (Search) :
+
+ * Implement a fasthteger square root functiOI1that takes
+ *  in a 32-bit unsigned lteger and returns another 32-bit unsigned integer
+ *  that is the floor of the square root of the input
+ 
+ 
+ Problem 3(Search) :
+ 
+ Write a method that takes a sorted array A of integers and a key k md
+return the index of first occurence of k h A return -l if k does Rot
+appear in A. Write tests to verify your code.
