add problem find next large number

--- a/README.ME
+++ b/README.ME
@@ -17,3 +17,8 @@ Problem 2 (Search) :
  Write a method that takes a sorted array A of integers and a key k md
 return the index of first occurence of k h A return -l if k does Rot
 appear in A. Write tests to verify your code.
+
+Problem 4(Search):
+
+ * Design an efficient algorithm that finds the next index of first occurrence  an element
+ * larger than specified key k, return -1 if every element is less than or equal to k 
