add fibonacci sequence optimized version

--- a/README.ME
+++ b/README.ME
@@ -22,3 +22,7 @@ Problem 4(Search):
 
  * Design an efficient algorithm that finds the next index of first occurrence  an element
  * larger than specified key k, return -1 if every element is less than or equal to k 
+ 
+ Problem 5(Other):
+  *  write efficient algorithm that return fibonacci sequence 
+ 
