add binary search problem for unbounded array

--- a/README.ME
+++ b/README.ME
@@ -5,20 +5,20 @@ Some examples :
 [ " 2 " , " 1 " , "+ " , " 3 " , " ∗ " ] −> ( ( 2 + 1) ∗ 3) −> 9
 [ " 4 " , " 13 " , " 5 " , "/ " , "+ " ] −> (4 + (1 3 / 5) ) −> 6
 
-Problem 2 (Search) :
+Problem 2 (Search - Binary Search) :
 
- * Implement a fasthteger square root functiOI1that takes
- *  in a 32-bit unsigned lteger and returns another 32-bit unsigned integer
+ * Implement a fast Ihteger square root functiOI1that takes
+ *  in a 32-bit unsigned lnteger and returns another 32-bit unsigned integer
  *  that is the floor of the square root of the input
  
  
- Problem 3(Search) :
+ Problem 3(Search - Binary Search) :
  
  Write a method that takes a sorted array A of integers and a key k md
 return the index of first occurence of k h A return -l if k does Rot
 appear in A. Write tests to verify your code.
 
-Problem 4(Search):
+Problem 4(Search - Binary Search):
 
  * Design an efficient algorithm that finds the next index of first occurrence  an element
  * larger than specified key k, return -1 if every element is less than or equal to k 
@@ -26,3 +26,8 @@ Problem 4(Search):
  Problem 5(Other):
   *  write efficient algorithm that return fibonacci sequence 
  
+ Problem 5(Search - Binary Search)
+  * suppose you do not know the length of array a in advance , accessing a[i] for i 
+ * beyond the end of the array throws an exception
+ * find the index of the first occurrence in a specified key k , return -1 if
+ * k does not appear in a
