add problem arrays intersections

--- a/README.ME
+++ b/README.ME
@@ -31,3 +31,6 @@ Problem 4(Search - Binary Search):
  * beyond the end of the array throws an exception
  * find the index of the first occurrence in a specified key k , return -1 if
  * k does not appear in a
+ 
+ Problem 6(Search - Binary Search)
+ * Given a sorted array a,b of length m,n find intersections between two arrays
