update readme file

--- a/README.ME
+++ b/README.ME
@@ -34,3 +34,8 @@ Problem 4(Search - Binary Search):
  
  Problem 6(Search - Binary Search)
  * Given a sorted array a,b of length m,n find intersections between two arrays
+
+ Problem 7(Search - Hashing)
+# Given a dictionary of  of english words, return the set of all words grouped into subsets of words that are
+# all anagrams for each other
+
