add battery capcity robot problem

--- a/README.ME
+++ b/README.ME
@@ -44,3 +44,12 @@ Problem 7(Search - Hashing)
 Problem 8(Search - Hashing)
 Design m efficient algorithm for determining if there exist
 a pair of indices (not necessarily distinct) such that a[i]+a[j]=8
+
+Problem 9 (Search)
+
+Given a robot with the energy regeneration ability
+described above, the mass of the robot m and a sequence of three dimensional
+co-ordinates that the robot needs to traverse, how would
+you determine the minimum battery capacity needed for the robot to
+complete the trajectory? (Assume the robot starts with a ull charged
+battery and the battery is used only for overcoming gravity)
